infra/k8s/dev/job-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: job-worker
spec:
  selector:
    matchLabels:
      app: job-worker
  template:
    metadata:
      labels:
        app: job-worker
    spec:
      containers:
        - name: job-worker
          # image: us.gcr.io/shbooks/job-worker
          image: beretedocker/shbooks/job-worker
