infra/k8s/dev/catalog.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalog
spec:
  selector:
    matchLabels:
      app: catalog
  template:
    metadata:
      labels:
        app: catalog
    spec:
      containers:
        - name: catalog
          # image: us.gcr.io/shbooks/catalog
          image: beretedocker/shbooks/catalog
---
apiVersion: v1
kind: Service
metadata:
  name: catalog-service
spec:
  ports:
    - port: 8080
      targetPort: 8080
      name: catalog-port
      protocol: TCP
---
####################### DATABASES #########################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalog-db
spec:
  selector:
    matchLabels:
      app: catalog-db
  template:
    metadata:
      labels:
        app: catalog-db
    spec:
      containers:
        - name: catalog-db
          image: mongo:6.0.1
          # resources:
          #   limits:
          #     cpu: '2'
          #     memory: 2Gi
          #   requests:
          #     cpu: '1'
          #     memory: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: catalog-db-service
spec:
  selector:
    app: catalog-db
  ports:
    - name: catalog-db-port
      port: 27017
      targetPort: 27017
      protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalog-elasticsearch
spec:
  selector:
    matchLabels:
      app: catalog-elasticsearch
  template:
    metadata:
      labels:
        app: catalog-elasticsearch
    spec:
      containers:
      - name: catalog-elasticsearch
        image: elasticsearch:8.4.2
        # resources:
        #   requests:
        #     memory: 2Gi
        #     cpu: '4'
        #   limits:
        #     memory: 4Gi
        #     cpu: '8'
---
apiVersion: v1
kind: Service
metadata:
  name: catalog-es-service
spec:
  selector:
    app: catalog-elasticsearch
  ports:
    - port: 9200
      name: catalog-es-port
      targetPort: 9200
      protocol: TCP
