infra/k8s/dev/job-queue.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: job-queue
spec:
  selector:
    matchLabels:
      app: job-queue
  template:
    metadata:
      labels:
        app: job-queue
    spec:
      containers:
        - name: job-queue
          # image: us.gcr.io/shbooks/job-queue
          image: beretedocker/shbooks/job-queue
---
####################### REDIS #########################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: job-queue-redis
spec:
  selector:
    matchLabels:
      app: job-queue-redis
  template:
    metadata:
      labels:
        app: job-queue-redis
    spec:
      containers:
        - name: job-queue-redis
          image: redis:todo
---
apiVersion: v1
kind: Service
metadata:
  name: job-queue-redis-service
spec:
  selector:
    app: job-queue-redis
  ports:
    - name: job-queue-redis-port
      port: 6379
      targetPort: 6379
      protocol: TCP
