infra/k8s/dev/order.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order
spec:
  selector:
    matchLabels:
      app: order
  template:
    metadata:
      labels:
        app: order
    spec:
      containers:
        - name: order
          # image: us.gcr.io/shbooks/order
          image: beretedocker/shbooks/order
---
apiVersion: v1
kind: Service
metadata:
  name: order-service
spec:
  ports:
    - port: 8080
      targetPort: 8080
      name: order-port
      protocol: TCP
---
####################### DATABASES #########################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-db
spec:
  selector:
    matchLabels:
      app: order-db
  template:
    metadata:
      labels:
        app: order-db
    spec:
      containers:
        - name: order-db
          image: mongo:6.0.1
          # resources:
          #   limits:
          #     cpu: '2'
          #     memory: 2Gi
          #   requests:
          #     cpu: '1'
          #     memory: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: order-db-service
spec:
  selector:
    app: order-db
  ports:
    - name: order-db-port
      port: 27017
      targetPort: 27017
      protocol: TCP
# ---
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: order-elasticsearch
# spec:
#   selector:
#     matchLabels:
#       app: order-elasticsearch
#   template:
#     metadata:
#       labels:
#         app: order-elasticsearch
#     spec:
#       containers:
#       - name: order-elasticsearch
#         image: elasticsearch:8.4.2
#         # resources:
#         #   requests:
#         #     memory: 2Gi
#         #     cpu: '4'
#         #   limits:
#         #     memory: 4Gi
#         #     cpu: '8'
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: order-es-service
# spec:
#   selector:
#     app: order-elasticsearch
#   ports:
#     - port: 9200
#       name: order-es-port
#       targetPort: 9200
#       protocol: TCP
