infra/k8s/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: shbooks.com # map this domain to your localhost ip for testing
      http:
        paths:
          - path: /api/users/?(.*)
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  name: auth-port
          - path: /api/books/?(.*)
            pathType: Prefix
            backend:
              service:
                name: catalog-service
                port: 
                  name: catalog-port
          - path: /api/orders/?(.*)
            pathType: Prefix
            backend:
              service:
                name: order-service
                port: 
                  name: order-port
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  name: frontend-port
